--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,12 +19,12 @@ body, html {
 }
 
 #background.day {
-    background: url('../img/day_background.jpg') no-repeat center center fixed;
+    background: url('../img/day_background.png') no-repeat center center fixed;
     background-size: cover;
 }
 
 #background.night {
-    background: url('../img/night_background.jpg') no-repeat center center fixed;
+    background: url('../img/night_background.png') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -33,6 +33,6 @@ body, html {
     bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
-    transition: opacity 1s ease-in-out; /* Add this line */
-    opacity: 1; /* Add this line */
+    transition: opacity 1s ease-in-out;
+    opacity: 0.8;
 }
